# musictool

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  WEB_APP_README.md  keo_shortform_factory_plan.md  pyproject.toml
presets/: tiktok_vertical.yaml
src/: __init__.py  audio_align.py  batch_processor.py  captions.py  cli.py  config.py  cutter.py  exporter.py  hook_finder.py  io_ops.py  scenes.py  utils.py  video_ops.py
supabase/migrations/: 20251003100324_create_shortform_schema.sql
web/: package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/components/: Layout.tsx
web/src/contexts/: AuthContext.tsx
web/src/lib/: supabase.ts
web/src/pages/: Dashboard.tsx  JobDetail.tsx  Login.tsx  NewJob.tsx  Presets.tsx
